feat(): remove reproduced form category to tag

--- a/content/posts/2020-01-19-sonarqube-8.0-config.md
+++ b/content/posts/2020-01-19-sonarqube-8.0-config.md
@@ -1,9 +1,9 @@
 ---
 date: 2020-01-19
-title: 'madpill-sonarqube'
+title: 'SonarQube 8.0 Configuration'
 template: post
 thumbnail: '../thumbnails/sonarqube.png'
-slug: madpill-sonarqube
+slug: sonarqube-8.0-config
 categories:
   - Tech
 tags:
