fix(url): cdn's url

--- a/content/posts/2020-01-19-sonarqube-8.0-config.md
+++ b/content/posts/2020-01-19-sonarqube-8.0-config.md
@@ -12,7 +12,7 @@ tags:
 
 ## SonarQube 的数据库 PostgreSQL
 
-SonarQube 从 7.9 已不支持 mysql，所以采用开源的 PostgreSQL。
+SonarQube 从 7.9 已不支持 MySQL，所以采用开源的 PostgreSQL。
 
 PostgreSQL 安装之后，默认生成一个名为 postgres 的数据库和一个名为 postgres 的数据库用户，同时还生成了一个名为 postgres 的 Linux 系统用户（以默认登陆）。
 
