fix(post): typo - reference format

--- a/content/posts/2020-05-13-ssl-conf.md
+++ b/content/posts/2020-05-13-ssl-conf.md
@@ -116,23 +116,23 @@ server {
 
 ## 参考
 
-1. [certbot instructions: Nginx on CentOS/RHEL 7](https://certbot.eff.org/lets-encrypt/centosrhel7-nginx.html)
+- [certbot instructions: Nginx on CentOS/RHEL 7](https://certbot.eff.org/lets-encrypt/centosrhel7-nginx.html)
 
-2. [使用 Let's Encrypt 免费证书实现 Nginx 站点的 HTTPS 化](https://pylixm.cc/posts/2019-08-12-letencrypt.html)
+- [使用 Let's Encrypt 免费证书实现 Nginx 站点的 HTTPS 化](https://pylixm.cc/posts/2019-08-12-letencrypt.html)
 
-3. [SSL Configuration Generator](https://ssl-config.mozilla.org/#server=nginx&version=1.12.2&config=intermediate&openssl=1.1.1d&guideline=5.4)
+- [SSL Configuration Generator](https://ssl-config.mozilla.org/#server=nginx&version=1.12.2&config=intermediate&openssl=1.1.1d&guideline=5.4)
 
-4. [How To Secure Nginx with Let's Encrypt on CentOS 7](https://www.digitalocean.com/community/tutorials/how-to-secure-nginx-with-let-s-encrypt-on-centos-7)
+- [How To Secure Nginx with Let's Encrypt on CentOS 7](https://www.digitalocean.com/community/tutorials/how-to-secure-nginx-with-let-s-encrypt-on-centos-7)
 
-5. [Let's Encrypt 吊销证书](https://letsencrypt.org/zh-cn/docs/revoking/)
+- [Let's Encrypt 吊销证书](https://letsencrypt.org/zh-cn/docs/revoking/)
 
-6. [阿里云 CDN 配置回源协议](https://help.aliyun.com/document_detail/34949.html)
+- [阿里云 CDN 配置回源协议](https://help.aliyun.com/document_detail/34949.html)
 
-7. [WIKI OCSP 装订](https://zh.wikipedia.org/wiki/OCSP%E8%A3%85%E8%AE%A2)
+- [WIKI OCSP 装订](https://zh.wikipedia.org/wiki/OCSP%E8%A3%85%E8%AE%A2)
 
-8. [WIKI SNI](https://zh.wikipedia.org/wiki/%E6%9C%8D%E5%8A%A1%E5%99%A8%E5%90%8D%E7%A7%B0%E6%8C%87%E7%A4%BA)
+- [WIKI SNI](https://zh.wikipedia.org/wiki/%E6%9C%8D%E5%8A%A1%E5%99%A8%E5%90%8D%E7%A7%B0%E6%8C%87%E7%A4%BA)
 
-9. [Secondary SSL cert #476](https://github.com/ssllabs/ssllabs-scan/issues/476#issuecomment-290305264)
+- [Secondary SSL cert #476](https://github.com/ssllabs/ssllabs-scan/issues/476#issuecomment-290305264)
 
-10. [Second certificate in SSL Test and no SNI support](https://community.letsencrypt.org/t/second-certificate-in-ssl-test-and-no-sni-support/115552/3)
+- [Second certificate in SSL Test and no SNI support](https://community.letsencrypt.org/t/second-certificate-in-ssl-test-and-no-sni-support/115552/3)
 
